Dummy Test Server Added

--- a/src/admin/dashboard/dashboard.html
+++ b/src/admin/dashboard/dashboard.html
@@ -1,12 +1,10 @@
 <template>
-	<main class="group">
+	<main class="group" id="dashboard">
 		<div class="group col collapse large-9-12">
-			<section class="group" id="adminDashboard">
+			<section class="group">
 				<header class="group col large-12-12">
 					<h3><icon set="home"></icon>Dashboard</h3>
 					<div class="quickSettings">
-						<a class="button icon"><icon set="reddit fa-fw"></icon>Reddit</a>
-						<a class="button icon"><icon set="reddit fa-fw"></icon>Reddit</a>
 					</div>
 				</header>
 			</section>
