--- a/src/admin/nav-list.html
+++ b/src/admin/nav-list.html
@@ -26,7 +26,7 @@
       </a>
       <ul>
         <li>
-          <a route-href="route: home">
+          <a route-href="route: dashboard">
             <icon set="home fa-fw"></icon>
            	Dashboard
           </a>
