site list modal

--- a/src/admin/sitemanager/site-list.html
+++ b/src/admin/sitemanager/site-list.html
@@ -8,8 +8,10 @@
       			<div class="col large-8-12">
           			<h4 class="list-group-item-heading">${site.firstName} ${site.lastName}</h4>
           			<p class="list-group-item-text">${site.email}</p>
-        			<a route-href="route: sites; params.bind: {id:site.id}" click.delegate="$parent.select(site)">Here</a>
-        		</div>
+                <div>
+                  <a id="myBtn" class="button mini reddit" route-href="route: sites; params.bind: {id:site.id}" click  .delegate="$parent.select(site)">Details</a>
+                </div>
+            </div>
       		</li>
     	</ul>
     </div>
