--- a/src/admin/sitemanager/sitemanager.html
+++ b/src/admin/sitemanager/sitemanager.html
@@ -19,5 +19,8 @@
 				<site-list></site-list>
 			</section>
 		</div>
+		<div class="modal" id="siteDetails">
+			<router-view ></router-view>
+		</div>
 	</main>
 </template>
