Edited the route router of the application to correctly follow Aurelia router configuration standards.

--- a/src/admin/sitemanager/site-details.html
+++ b/src/admin/sitemanager/site-details.html
@@ -27,7 +27,7 @@
       </form>
     </div>
     <div class="actions">
-      <a class="button" id="myBtn2">Cancle</a>
+      <a class="button" id="myBtn2" click.delegate="cancle()">Cancle</a>
       <button class="btn btn-success" click.delegate="save()" disabled.bind="!canSave">Save</button>
     </div>
   </div>
