--- a/src/zencss/buttons/tutorial/default/code-snippet.html
+++ b/src/zencss/buttons/tutorial/default/code-snippet.html
@@ -1,24 +1,18 @@
 <template class="col large-12-12">
-	<require from="./code/html5.html"></require>
+	<require from="./code/markup-index.html"></require>
 	<div class="group code-example">
 		<h5>Code example</h5>
 		<nav-tabs>
 			<tab>
-				<a href="#" class="button icon">
+				<a route-href="route: markup" class="button icon">
 					<icon set="html5"></icon>
 					Html5
-				</a>
-			</tab>
-			<tab>
-				<a href="#" class="button icon">
-					<icon set="css3"></icon>
-					css3
 				</a>
 			</tab>
 		</nav-tabs>
 		<pre>
 			<code style='white-space:pre'>
-				<html5></html5>
+				<markup-index></markup-index>
 			</code>
 		</pre>
 	</div>
