--- a/src/zencss/forms/download/download.html
+++ b/src/zencss/forms/download/download.html
@@ -1,5 +1,5 @@
 <template>
 	<div class="col large-12-12 page">
-		<h1>Download</h1>
+		<h1 class="section-header">Download</h1>
 	</div>
 </template>
