--- a/src/zencss/forms/changelog/changelog.html
+++ b/src/zencss/forms/changelog/changelog.html
@@ -1,5 +1,5 @@
 <template>
 	<div class="col large-12-12 page">
-		<h1>Change Log</h1>
+		<h1 class="section-header">Change Log</h1>
 	</div>
 </template>
