--- a/src/zencss/forms/tutorial/default/model.html
+++ b/src/zencss/forms/tutorial/default/model.html
@@ -5,18 +5,17 @@
 			<form class="fluid">
 				<fieldset class="stacked">
 					<legend>Title</legend>
-					<div class="field">
+					<field format='stacked'>
 						<label>First Name</label>
-						<input type="text">
-					</div>
-					<div class="field">
+						<input type="text" placeholder="First Name">
+					</field>
+					<field format='stacked'>
 						<label>Password</label>
-						<input type="text">
-					</div>
-					<div class="field">
-						<input type="checkbox">
-						<label>I agree to the Terms and Conditions</label>
-					</div>
+						<input type="text" placeholder="Last Name">
+					</field>
+					<field>
+						<checkbox label="I agree to the terms and conditions"></checkbox>
+					</field>
 					<input type="submit" placeholder="submit">
 				</fieldset>
 			</form>
