--- a/src/zencss/forms/tutorial/tutorial.html
+++ b/src/zencss/forms/tutorial/tutorial.html
@@ -1,9 +1,11 @@
 <template>
 	<require from="./default/default-index.html"></require>
+	<require from="./advanced/advanced-index.html"></require>
 
 	<section class="group col large-12-12 page">
-		<h1 class="section-head">Tutorial</h1>
+		<h1 class="section-header">Tutorial</h1>
 		<default-index></default-index>
 		<hr>
+		<advanced-index></advanced-index>
 	</section>
 </template>
